first page parse

--- a/pages/static/style/main.sass
+++ b/pages/static/style/main.sass
@@ -92,9 +92,9 @@ main
 
 		.argument
 			display: grid
-			ul
+			.arguments
 				padding: 0
-				li
+				.address_list
 					display: flex
 					span
 						font-size: 30px
